<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Roommate Manager</string>

    <!-- Nav Drawer Section Titles -->
    <string name="title_section1">Home</string>
    <string name="title_section2">Groceries</string>
    <string name="title_section3">Finances</string>
    <string name="title_section4">To - Do</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <!-- Tab indicator color -->
    <string name="tab_indicator_color">#ff8674b5</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- Button Titles -->
    <string name="login_button_title">Login</string>
    <string name="createAccount_button_title">Create Account</string>

    <!-- EditText Hints -->
    <string name="username_editText_hint">Username</string>
    <string name="password_editText_hint">Password</string>
    <string name="confirmPassword_editText_hint">Confirm Password</string>
    <string name="email_editText_hint">E-Mail</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="houseName_editText_hint">House Name</string>
    <string name="housePassword_editText_hint">House Password</string>

    <!-- Action Bar Strings -->
    <string name="title_action_logout">Log Out</string>
    <string name="title_action_settings">Settings</string>

    <!-- Dialog Strings -->
    <string name="item_name_hint">Item Name</string>
    <string name="title_grocery_positive">Add Item</string>
    <string name="title_grocery_negative">Cancel</string>
    <string name="title_addItem_dialog">Create New Item</string>

    <!-- Radio Button Titles -->
    <string name="newHouse_radioButton_title">New House</string>
    <string name="joinHouse_radioButton_title">Join Existing</string>


</resources>
