<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.iupui.gdvander.roommatemanager.app.RegisterActivity"
    android:id="@+id/register_layout">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUsername"
        android:hint="@string/username_editText_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:layout_below="@+id/editTextUsername"
        android:layout_marginTop="10dp"
        android:hint="@string/email_editText_hint"
        android:layout_alignStart="@+id/editTextUsername"
        android:layout_alignEnd="@+id/editTextUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="10dp"
        android:hint="@string/password_editText_hint"
        android:layout_alignStart="@+id/editTextUsername"
        android:layout_alignEnd="@+id/editTextUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextConfirmPassword"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="10dp"
        android:hint="@string/confirmPassword_editText_hint"
        android:layout_alignStart="@+id/editTextUsername"
        android:layout_alignEnd="@+id/editTextUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextHouseName"
        android:layout_below="@+id/editTextConfirmPassword"
        android:layout_marginTop="50dp"
        android:hint="@string/houseName_editText_hint"
        android:layout_alignStart="@+id/editTextUsername"
        android:layout_alignEnd="@+id/editTextUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextHousePassword"
        android:layout_below="@+id/editTextHouseName"
        android:layout_marginTop="10dp"
        android:hint="@string/housePassword_editText_hint"
        android:layout_alignStart="@+id/editTextUsername"
        android:layout_alignEnd="@+id/editTextUsername"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount_button_title"
        android:id="@+id/btnCreateAccount"
        android:layout_below="@+id/radioGroup"
        android:layout_alignStart="@+id/editTextUsername"
        android:layout_alignEnd="@+id/editTextUsername"
        android:layout_marginTop="20dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_below="@+id/editTextHousePassword"
        android:layout_alignEnd="@+id/editTextHousePassword"
        android:layout_alignStart="@+id/editTextHousePassword"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newHouse_radioButton_title"
            android:id="@+id/radioButtonNewHouse"
            android:checked="true"
            android:layout_marginRight="5dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joinHouse_radioButton_title"
            android:id="@+id/radioButtonJoinHouse"
            android:checked="false" />
    </RadioGroup>

</RelativeLayout>
