<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.iupui.gdvander.roommatemanager.app.LoginActivity"
    android:id="@+id/login_layout">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUsername"
        android:layout_marginTop="56dp"
        android:layout_alignParentTop="true"
        android:hint="@string/username_editText_hint"
        android:layout_alignStart="@+id/editTextPassword"
        android:layout_alignEnd="@+id/editTextPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_below="@+id/editTextUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:hint="@string/password_editText_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_title"
        android:id="@+id/btnLogin"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/btnCreateAccount"
        android:layout_alignEnd="@+id/btnCreateAccount" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount_button_title"
        android:id="@+id/btnCreateAccount"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/btnLogin"
        android:layout_alignStart="@+id/editTextPassword"
        android:layout_alignEnd="@+id/editTextPassword" />

</RelativeLayout>
